@@ -418,7 +418,9 @@
               </tal:block>
             </tal:block>
           </select>
-
+	  <input type="hidden" id="kupu-extsource-enabledflag"
+            tal:attributes="value python:'SilvaExternalSources' in here.service_extensions.get_installed_names() and '1' or '0'" />
+          <div style="display: none" id="kupu-extsource-disabledtext">The External Sources product is not installed.  This tool is disabled.</div>
           <input class="button" type="button" value="add external source" id="kupu-extsource-addbutton" />
           <input class="cancel" type="button" value="cancel" id="kupu-extsource-cancelbutton" />
           <input class="button" type="button" value="update source" id="kupu-extsource-updatebutton" />
